added 3 card images to quiz.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,19 @@ body {
     justify-content: center; 
     bottom: 0px;
 }
+
+.card-group {
+     display: flex;
+}
+
+.card1 {
+    text-align: center;
+}
+
+.container-cards {
+    display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: auto;
+	padding: 60px 30px;
+}
